# SysProg_Lab5

./: .gitignore  CMakeLists.txt
data/: test1.c  test_calc.txt
src/: Scanner.hpp  lexer.l  main.cpp  parser.y
src/ast/: TreeNode.cpp  TreeNode.hpp
